--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -8,7 +8,7 @@ output:
 params:
   scenario:
     label: "Scenario"
-    value: "mvn-short"
+    value: "base"
     input: text
 editor_options: 
   chunk_output_type: console
