--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -531,15 +531,18 @@ phi_Pb_Ma_bp = data.frame(
 )
 rownames(phi_Pb_Ma_bp) = NULL
 
-# fall trap survival
+# fall & winter trap survival
 new = post_subset(post, "Lphi_obs_new_Pa_Ma_dev", TRUE)
 obs = post_subset(post, "Lphi_obs_Pa_Ma_dev", TRUE)
 bp = array_format(colMeans(obs > new))
-dimnames(bp) = list(all_yrs[1:dim(bp)[1]], "fall-mig", pops)
-bp = bp[,"fall-mig",]
+dimnames(bp) = list(all_yrs[1:dim(bp)[1]], c("fall-mig", "spring-mig"), pops)
+bp = cbind(CAT_fall = bp[,"fall-mig","CAT"], CAT_spring = bp[,"spring-mig","CAT"],
+           LOS_fall = bp[,"fall-mig","LOS"], LOS_spring = bp[,"spring-mig","LOS"],
+           MIN_fall = bp[,"fall-mig","MIN"], MIN_spring = bp[,"spring-mig","MIN"],
+           UGR_fall = bp[,"fall-mig","UGR"], UGR_spring = bp[,"spring-mig","UGR"])
 phi_Pa_Ma_bp = data.frame(
-  name = rep("Fall Trap to LGR", 4), pop = pops,
-  origin = rep("NOR", 4),   LH_type = rep("Fall Migrants", 4),
+  name = rep(c("Fall Trap to LGR", "Winter Tagging"), each = 4), pop = rep(pops, 2),
+  origin = rep("NOR", 8),   LH_type = rep(c("Fall Migrants", "Spring Migrants"), each = 4),
   summarize_bp(bp)
 )
 rownames(phi_Pa_Ma_bp) = NULL
