--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -768,8 +768,9 @@ In all figures below, the thick red line is the posterior median value each year
 
 ```{r fall-trap-N-fit, fig.width = 6, fig.height = 5}
 plot_f = function(j) {
-  plot_tseries(post_summ(post, sub_index("^Pa[.+,LH_type,pop]$", LH_type = i_fall, pop = j)),
+  plot_tseries(post_summ(post, sub_index("^Pa[year,LH_type,pop]$", year = ts_yrs, LH_type = i_fall, pop = j)),
                get_obs_ests_log_normal(log(jags_data$Pa_obs[observable,i_fall,j]), jags_data$sig_Pa_obs[observable,i_fall,j]),
+               yrs = all_yrs[ts_yrs],
                main = pops[j])
 }
 
@@ -783,9 +784,10 @@ mtext(side = 2, outer = T, line = 0.25, "Fall Parr Abundance")
 
 ```{r spring-trap-N-fit, fig.width = 6, fig.height = 5}
 plot_f = function(j) {
-  plot_tseries(post_summ(post, sub_index("^Mb[.+,LH_type,origin,pop]$", origin = o_nor, LH_type = i_spring, pop = j)), 
+  plot_tseries(post_summ(post, sub_index("^Mb[year,LH_type,origin,pop]$", year = ts_yrs, origin = o_nor, LH_type = i_spring, pop = j)), 
                get_obs_ests_log_normal(log(jags_data$Mb_obs[observable,i_spring,o_nor,j]), jags_data$sig_Mb_obs[observable,i_spring,o_nor,j]),
-               main = pops[j])
+               main = pops[j],
+               yrs = all_yrs[ts_yrs])
 }
 
 par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
@@ -798,9 +800,10 @@ mtext(side = 2, outer = T, line = 0.25, "Spring Smolt Abundance")
 
 ```{r adult-N-fit, fig.width = 6, fig.height = 5}
 plot_f = function(j) {
-  plot_tseries(post_summ(post, sub_index("^Ra_tot[.+,pop]$", pop = j)),
+  plot_tseries(post_summ(post, sub_index("^Ra_tot[year,pop]$", year = ts_yrs, pop = j)),
                get_obs_ests_log_normal(log(jags_data$Ra_obs[observable,j]), jags_data$sig_Ra_obs[observable,j]),
-               main = pops[j])
+               main = pops[j],
+               yrs = all_yrs[ts_yrs])
 }
 
 par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
@@ -815,9 +818,10 @@ mtext(side = 2, outer = T, line = 0.25, "Adult Return Abundance")
 
 ```{r summer-surv-fit, fig.width = 6, fig.height = 5}
 plot_f = function(j) {
-  plot_tseries(post_summ(post, sub_index("^phi_Pb_Ma[.+,pop]", pop = j)),
+  plot_tseries(post_summ(post, sub_index("^phi_Pb_Ma[year,pop]", year = ts_yrs, pop = j)),
                get_obs_ests_logit_normal(jags_data$Lphi_obs_Pb_Ma[observable,j], jags_data$sig_Lphi_obs_Pb_Ma[observable,j]),
-               main = pops[j])
+               main = pops[j],
+               yrs = all_yrs[ts_yrs])
 }
 
 par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
@@ -830,9 +834,10 @@ mtext(side = 2, outer = T, line = 0.25, TeX("$Summer\\,Parr \\rightarrow LGR\\,S
 
 ```{r fall-surv-fit, fig.width = 6, fig.height = 5}
 plot_f = function(j) {
-  plot_tseries(post_summ(post, sub_index("^phi_Pa_Ma[.+,LH_type,pop]$", LH_type = i_fall, pop = j)),
+  plot_tseries(post_summ(post, sub_index("^phi_Pa_Ma[year,LH_type,pop]$", year = ts_yrs, LH_type = i_fall, pop = j)),
                get_obs_ests_logit_normal(jags_data$Lphi_obs_Pa_Ma[observable,i_fall,j], jags_data$sig_Lphi_obs_Pa_Ma[observable,i_fall,j]),
-               main = pops[j])
+               main = pops[j],
+               yrs = all_yrs[ts_yrs])
 }
 
 par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
@@ -845,9 +850,9 @@ mtext(side = 2, outer = T, line = 0.25, TeX("$Fall\\,Parr \\rightarrow LGR\\,Sur
 
 ```{r spring-surv-fit-nor, fig.width = 6, fig.height = 5}
 plot_f = function(j) {
-  plot_tseries(post_summ(post, sub_index("^phi_Mb_Ma[.+,LH_type,origin,pop]$",LH_type = i_spring, origin = o_nor, pop = j)),
+  plot_tseries(post_summ(post, sub_index("^phi_Mb_Ma[year,LH_type,origin,pop]$", year = ts_yrs, LH_type = i_spring, origin = o_nor, pop = j)),
                get_obs_ests_logit_normal(jags_data$Lphi_obs_Mb_Ma[observable,i_spring,o_nor,j], jags_data$sig_Lphi_obs_Mb_Ma[observable,i_spring,o_nor,j]),
-               main = pops[j])
+               main = pops[j], yrs = all_yrs[ts_yrs])
 }
 
 par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
@@ -860,9 +865,9 @@ mtext(side = 2, outer = T, line = 0.25, TeX("$Spring\\,Smolt \\rightarrow LGR\\,
 
 ```{r spring-surv-fit-hor, fig.width = 6, fig.height = 5}
 plot_f = function(j) {
-  plot_tseries(post_summ(post, sub_index("^phi_Mb_Ma[.+,LH_type,origin,pop]$", LH_type = i_spring, origin = o_hor, pop = j)),
+  plot_tseries(post_summ(post, sub_index("^phi_Mb_Ma[year,LH_type,origin,pop]$", year = ts_yrs, LH_type = i_spring, origin = o_hor, pop = j)),
                get_obs_ests_logit_normal(jags_data$Lphi_obs_Mb_Ma[observable,i_spring,o_hor,j], jags_data$sig_Lphi_obs_Mb_Ma[observable,i_spring,o_hor,j]),
-               main = pops[j])
+               main = pops[j], yrs = all_yrs[ts_yrs])
 }
 
 par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
@@ -875,9 +880,10 @@ mtext(side = 2, outer = T, line = 0.25, TeX("$Spring\\,Smolt \\rightarrow LGR\\,
 
 ```{r hydro-nor-surv-fit, fig.width = 6, fig.height = 5}
 par(oma = c(1.5,1.5,0,0), mfrow = c(1,1))
-plot_tseries(post_summ(post, sub_index("^phi_Ma_O0[.+,origin]$", origin = o_nor)),
+plot_tseries(post_summ(post, sub_index("^phi_Ma_O0[year,origin]$", year = ts_yrs, origin = o_nor)),
              get_obs_ests_logit_normal(jags_data$Lphi_obs_Ma_O0[observable,o_nor], jags_data$sig_Lphi_obs_Ma_O0[observable,o_nor]),
-             main = TeX("$LGR\\,Smolt \\rightarrow O_0\\,Survival\\,(NOR)"))
+             main = TeX("$LGR\\,Smolt \\rightarrow O_0\\,Survival\\,(NOR)"),
+             yrs = all_yrs[ts_yrs])
 mtext(side = 1, outer = T, line = 0.25, "Brood Year")
 mtext(side = 2, outer = T, line = 0.25, "Survival")
 ```
@@ -886,9 +892,10 @@ mtext(side = 2, outer = T, line = 0.25, "Survival")
 
 ```{r hydro-hor-surv-fit, fig.width = 6, fig.height = 5}
 par(oma = c(1.5,1.5,0,0), mfrow = c(1,1))
-plot_tseries(post_summ(post, sub_index("^phi_Ma_O0[.+,origin]$", origin = o_hor)),
+plot_tseries(post_summ(post, sub_index("^phi_Ma_O0[year,origin]$", year = ts_yrs, origin = o_hor)),
              get_obs_ests_logit_normal(jags_data$Lphi_obs_Ma_O0[observable,o_hor], jags_data$sig_Lphi_obs_Ma_O0[observable,o_hor]),
-             main = TeX("$LGR\\,Smolt \\rightarrow O_0\\,Survival\\,(HOR)"))
+             main = TeX("$LGR\\,Smolt \\rightarrow O_0\\,Survival\\,(HOR)"),
+             yrs = all_yrs[ts_yrs])
 mtext(side = 1, outer = T, line = 0.25, "Brood Year")
 mtext(side = 2, outer = T, line = 0.25, "Survival")
 ```
@@ -897,9 +904,10 @@ mtext(side = 2, outer = T, line = 0.25, "Survival")
 
 ```{r BON-LGR-surv-fit-nor, fig.width = 6, fig.height = 5}
 par(oma = c(1.5,1.5,0,0), mfrow = c(1,1))
-plot_tseries(post_summ(post, sub_index("^phi_Rb_Ra[.+,origin]$", origin = o_nor)),
+plot_tseries(post_summ(post, sub_index("^phi_Rb_Ra[year,origin]$", year = ts_yrs, origin = o_nor)),
              get_obs_ests_multinomial(cbind(jags_data$LGR_adults[observable,o_nor], jags_data$BON_adults[observable,o_nor] - jags_data$LGR_adults[observable,o_nor]), 1),
-             main = TeX("$BON\\,Adults \\rightarrow LGR\\,Survival\\,(NOR)"))
+             main = TeX("$BON\\,Adults \\rightarrow LGR\\,Survival\\,(NOR)"),
+             yrs = all_yrs[ts_yrs])
 mtext(side = 1, outer = T, line = 0.25, "Return Year")
 mtext(side = 2, outer = T, line = 0.25, "Survival")
 ```
@@ -908,9 +916,10 @@ mtext(side = 2, outer = T, line = 0.25, "Survival")
 
 ```{r BON-LGR-surv-fit-hor, fig.width = 6, fig.height = 5}
 par(oma = c(1.5,1.5,0,0), mfrow = c(1,1))
-plot_tseries(post_summ(post, sub_index("^phi_Rb_Ra[.+,origin]$", origin = o_hor)),
+plot_tseries(post_summ(post, sub_index("^phi_Rb_Ra[year,origin]$", year = ts_yrs, origin = o_hor)),
              get_obs_ests_multinomial(cbind(jags_data$LGR_adults[observable,o_hor], jags_data$BON_adults[observable,o_hor] - jags_data$LGR_adults[observable,o_hor]), 1),
-             main = TeX("$BON\\,Adults \\rightarrow LGR\\,Survival\\,(HOR)"))
+             main = TeX("$BON\\,Adults \\rightarrow LGR\\,Survival\\,(HOR)"),
+             yrs = all_yrs[ts_yrs])
 mtext(side = 1, outer = T, line = 0.25, "Return Year")
 mtext(side = 2, outer = T, line = 0.25, "Survival")
 ```
@@ -1009,8 +1018,8 @@ post = post_bind(post, q_new)
 # these are the observed proportions by age (aggregated across origins) and origin (aggregated across ages)
 
 # containers
-x_weir_age_obs = x_carc_age_obs = array(NA, dim = c(jags_data$ny, jags_data$nk, jags_data$nj))
-x_weir_origin_obs = x_carc_origin_obs = array(NA, dim = c(jags_data$ny, jags_data$no, jags_data$nj))
+x_weir_age_obs = x_carc_age_obs = array(NA, dim = c(jags_data$ny_obs, jags_data$nk, jags_data$nj))
+x_weir_origin_obs = x_carc_origin_obs = array(NA, dim = c(jags_data$ny_obs, jags_data$no, jags_data$nj))
 
 for (j in 1:jags_data$nj) {
   # calculate aggregate proportions for each age
@@ -1062,12 +1071,12 @@ weir_sample_size = function(j) {
 weir_comp_fit_plot = function(j) {
 
   par(mfrow = c(2,3), oma = c(1.5,1.5,0,0))#, mar = c(1.5,1.5,1.5,0.5))
-  plot_tseries(post_summ(post, sub_index("^q_Ra[.+,1,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$weir_x_obs[observable,,j], 1), main = TeX("$Age\\,3\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Ra[.+,2,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$weir_x_obs[observable,,j], 2), main = TeX("$Age\\,4\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Ra[.+,3,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$weir_x_obs[observable,,j], 3), main = TeX("$Age\\,5\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Ra[.+,4,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$weir_x_obs[observable,,j], 4), main = TeX("$Age\\,3\\,(HOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Ra[.+,5,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$weir_x_obs[observable,,j], 5), main = TeX("$Age\\,4\\,(HOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Ra[.+,6,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$weir_x_obs[observable,,j], 6), main = TeX("$Age\\,5\\,(HOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Ra[year,1,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$weir_x_obs[observable,,j], 1), main = TeX("$Age\\,3\\,(NOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Ra[year,2,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$weir_x_obs[observable,,j], 2), main = TeX("$Age\\,4\\,(NOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Ra[year,3,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$weir_x_obs[observable,,j], 3), main = TeX("$Age\\,5\\,(NOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Ra[year,4,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$weir_x_obs[observable,,j], 4), main = TeX("$Age\\,3\\,(HOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Ra[year,5,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$weir_x_obs[observable,,j], 5), main = TeX("$Age\\,4\\,(HOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Ra[year,6,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$weir_x_obs[observable,,j], 6), main = TeX("$Age\\,5\\,(HOR)$"), yrs = all_yrs[ts_yrs])
   
   mtext(side = 1, outer = T, line = 0.25, "Return Year")
   mtext(side = 2, outer = T, line = 0.25, "Proportion of Return")
@@ -1076,9 +1085,9 @@ weir_comp_fit_plot = function(j) {
 # for fits to each age, aggregated across origins
 weir_comp_fit_plot_age = function(j) {
   par(mfcol = c(1,3), oma = c(1.5,1.5,0,0))
-  plot_tseries(post_summ(post, sub_index("^q_Ra_age[.+,1,pop]$", pop = j)), get_obs_ests_multinomial(x_weir_new_obs$x_weir_age_obs[observable,,j], 1), main = TeX("$Age\\,3$"), ylim = c(0,1))
-  plot_tseries(post_summ(post, sub_index("^q_Ra_age[.+,2,pop]$", pop = j)), get_obs_ests_multinomial(x_weir_new_obs$x_weir_age_obs[observable,,j], 2), main = TeX("$Age\\,4$"), ylim = c(0,1))
-  plot_tseries(post_summ(post, sub_index("^q_Ra_age[.+,3,pop]$", pop = j)), get_obs_ests_multinomial(x_weir_new_obs$x_weir_age_obs[observable,,j], 3), main = TeX("$Age\\,5$"), ylim = c(0,1))
+  plot_tseries(post_summ(post, sub_index("^q_Ra_age[year,1,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(x_weir_new_obs$x_weir_age_obs[observable,,j], 1), main = TeX("$Age\\,3$"), ylim = c(0,1), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Ra_age[year,2,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(x_weir_new_obs$x_weir_age_obs[observable,,j], 2), main = TeX("$Age\\,4$"), ylim = c(0,1), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Ra_age[year,3,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(x_weir_new_obs$x_weir_age_obs[observable,,j], 3), main = TeX("$Age\\,5$"), ylim = c(0,1), yrs = all_yrs[ts_yrs])
   mtext(side = 1, outer = T, line = 0.25, "Return Year")
   mtext(side = 2, outer = T, line = 0.25, "Proportion of Return")
 }
@@ -1087,8 +1096,8 @@ weir_comp_fit_plot_age = function(j) {
 weir_comp_fit_plot_origin = function(j) {
   par(mfcol = c(1,2), oma = c(1.5,1.5,0,0))
   
-  plot_tseries(post_summ(post, sub_index("^q_Ra_origin[.+,1,pop]$", pop = j)), get_obs_ests_multinomial(x_weir_new_obs$x_weir_origin_obs[observable,,j], 1), main = TeX("$NOR$"), ylim = c(0,1))
-  plot_tseries(post_summ(post, sub_index("^q_Ra_origin[.+,2,pop]$", pop = j)), get_obs_ests_multinomial(x_weir_new_obs$x_weir_origin_obs[observable,,j], 2), main = TeX("$HOR$"), ylim = c(0,1))
+  plot_tseries(post_summ(post, sub_index("^q_Ra_origin[year,1,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(x_weir_new_obs$x_weir_origin_obs[observable,,j], 1), main = TeX("$NOR$"), ylim = c(0,1), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Ra_origin[year,2,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(x_weir_new_obs$x_weir_origin_obs[observable,,j], 2), main = TeX("$HOR$"), ylim = c(0,1), yrs = all_yrs[ts_yrs])
   mtext(side = 1, outer = T, line = 0.25, "Return Year")
   mtext(side = 2, outer = T, line = 0.25, "Proportion of Return")
 }
@@ -1226,12 +1235,12 @@ carc_sample_size = function(j) {
 carc_comp_fit_plot = function(j) {
   
   par(mfrow = c(2,3), oma = c(1.5,1.5,0,0))#, mar = c(1.5,1.5,1.5,0.5))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,1,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 1), main = TeX("$Age\\,3\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,2,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 2), main = TeX("$Age\\,4\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,3,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 3), main = TeX("$Age\\,5\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,4,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 4), main = TeX("$Age\\,3\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,5,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 5), main = TeX("$Age\\,4\\,(NOR)$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[.+,6,pop]$", pop = j)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 6), main = TeX("$Age\\,5\\,(NOR)$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[year,1,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 1), main = TeX("$Age\\,3\\,(NOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[year,2,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 2), main = TeX("$Age\\,4\\,(NOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[year,3,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 3), main = TeX("$Age\\,5\\,(NOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[year,4,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 4), main = TeX("$Age\\,3\\,(NOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[year,5,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 5), main = TeX("$Age\\,4\\,(NOR)$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj[year,6,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(jags_data$carc_x_obs[observable,,j], 6), main = TeX("$Age\\,5\\,(NOR)$"), yrs = all_yrs[ts_yrs])
   mtext(side = 1, outer = T, line = 0.25, "Return Year")
   mtext(side = 2, outer = T, line = 0.25, "Proportion of Carcasses")
 }
@@ -1239,9 +1248,9 @@ carc_comp_fit_plot = function(j) {
 # for fits to each age, aggregated across origins
 carc_comp_fit_plot_age = function(j) {
   par(mfcol = c(1,3), oma = c(1.5,1.5,0,0))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_age[.+,1,pop]$", pop = j)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_age_obs[observable,,j], 1), main = TeX("$Age\\,3$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_age[.+,2,pop]$", pop = j)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_age_obs[observable,,j], 2), main = TeX("$Age\\,4$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_age[.+,3,pop]$", pop = j)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_age_obs[observable,,j], 3), main = TeX("$Age\\,5$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_age[year,1,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_age_obs[observable,,j], 1), main = TeX("$Age\\,3$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_age[year,2,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_age_obs[observable,,j], 2), main = TeX("$Age\\,4$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_age[year,3,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_age_obs[observable,,j], 3), main = TeX("$Age\\,5$"), yrs = all_yrs[ts_yrs])
   mtext(side = 1, outer = T, line = 0.25, "Return Year")
   mtext(side = 2, outer = T, line = 0.25, "Proportion of Return")
 }
@@ -1249,8 +1258,8 @@ carc_comp_fit_plot_age = function(j) {
 # for fits to each origin, aggregated across ages
 carc_comp_fit_plot_origin = function(j) {
   par(mfcol = c(1,2), oma = c(1.5,1.5,0,0))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_origin[.+,1,pop]$", pop = j)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_origin_obs[observable,,j], 1), main = TeX("$NOR$"))
-  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_origin[.+,2,pop]$", pop = j)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_origin_obs[observable,,j], 2), main = TeX("$HOR$"))
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_origin[year,1,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_origin_obs[observable,,j], 1), main = TeX("$NOR$"), yrs = all_yrs[ts_yrs])
+  plot_tseries(post_summ(post, sub_index("^q_Sa_adj_origin[year,2,pop]$", pop = j, year = ts_yrs)), get_obs_ests_multinomial(x_carc_new_obs$x_carc_origin_obs[observable,,j], 2), main = TeX("$HOR$"), yrs = all_yrs[ts_yrs])
   mtext(side = 1, outer = T, line = 0.25, "Return Year")
   mtext(side = 2, outer = T, line = 0.25, "Proportion of Return")
 }
