--- a/03-post-process/compare-sim-to-obs.Rmd
+++ b/03-post-process/compare-sim-to-obs.Rmd
@@ -674,6 +674,30 @@ x = append(
 x = do.call(abind, append(x, list(along = 4)))
 vals_plots(x, "Total LGR Smolt: Estimates")
 ratio_plots(x, "Total LGR Smolt: Ratios")
+#### Aggregate Total Adult Return (To Tributary)
+
+```{r}
+x = append(
+  list(get_ratio("Ra_aggregate[year,origin]", obs_y, sim_y, origin = 1)),
+  list(get_ratio("Ra_aggregate[year,origin]", obs_y, sim_y, origin = 2))
+)
+x = do.call(abind, append(x, list(along = 4)))
+vals_plots(x, "Aggregate Total Adult Return (To Tributary): Estimates")
+ratio_plots(x, "Aggregate Total Adult Return (To Tributary): Ratios")
+derived_ratios = rbind(derived_ratios, summarize_ratios(x, Class = "Abundance", Type = "Aggregate Total Adult Return (To Tributary)"))
+```
+
+#### Aggregate Total Smolt (At LGR)
+
+```{r}
+x = append(
+  list(get_ratio("Ma_aggregate[year,origin]", obs_y, sim_y, origin = 1)),
+  list(get_ratio("Ma_aggregate[year,origin]", obs_y, sim_y, origin = 2))
+)
+x = do.call(abind, append(x, list(along = 4)))
+vals_plots(x, "Aggregate Total Smolt (At LGR): Estimates")
+ratio_plots(x, "Aggregate Total Smolt (At LGR): Ratios")
+derived_ratios = rbind(derived_ratios, summarize_ratios(x, Class = "Abundance", Type = "Aggregate Total Smolt (At LGR)"))
 ```
 
 ### SAR Rates {.tabset .tabset-pills}
@@ -1014,6 +1038,34 @@ pop_ts_plots("Ma_tot[year,origin,pop]", origin = 1)
 
 ```{r}
 pop_ts_plots("Ma_tot[year,origin,pop]", origin = 2)
+```
+
+#### Aggregate Total Adult Return (To Tributary) {.tabset .tabset-pills}
+
+##### NOR
+
+```{r, fig.width = 7, fig.height = 4}
+ts_plot("Ra_aggregate[year,origin]", origin = 1)
+```
+
+##### HOR
+
+```{r, fig.width = 7, fig.height = 4}
+ts_plot("Ra_aggregate[year,origin]", origin = 2)
+```
+
+#### Aggregate Total Smolt (At LGR) {.tabset .tabset-pills}
+
+##### NOR
+
+```{r, fig.width = 7, fig.height = 4}
+ts_plot("Ma_aggregate[year,origin]", origin = 1)
+```
+
+##### HOR
+
+```{r, fig.width = 7, fig.height = 4}
+ts_plot("Ma_aggregate[year,origin]", origin = 2)
 ```
 
 ### SAR Rates {.tabset .tabset-pills}
